--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "require": {
         "php": "^8.4",
         "psr/http-message": "^1.0|^2.0",
-        "psr/http-server-handler": "^1.0"
+        "psr/http-server-handler": "^1.0",
+        "psr/http-server-middleware": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
